data/issues_nolabel/nolabel_test_17882.txt
pip install TensorFlow wheel fails due to BoringSSL

System information

Have I written custom code (as opposed to using a stock example script provided in TensorFlow): No
OS Platform and Distribution (e.g., Linux Ubuntu 16.04): s390x Ubuntu 16.04
TensorFlow installed from (source or binary): source
TensorFlow version (use command below): v1.6.0
Python version: 2.7.12
Bazel version (if compiling from source): 0.7.0
GCC/Compiler version (if compiling from source): 5.4.0
CUDA/cuDNN version: NA
GPU model and memory: NA
Exact command to reproduce: pip install tensorflow-1.6.0-cp27-cp27mu-linux_s390x.whl

Describe the problem
TensorFlow v1.6.0 wheel installation fails on s390x since it installs grpcio which fails due to BoringSSL.
@gunan, this is similar to earlier issues related to BoringSSL on s390x.
Source code / logs
sudo pip install /tmp/tensorflow_wheel/tensorflow-1.6.0-cp27-cp27mu-linux_s390x.whl
.
.
.
  Running setup.py install for gast ... done
  Running setup.py install for termcolor ... done
  Running setup.py install for absl-py ... done
  Running setup.py install for grpcio ... error
.
.
.
Werror=format-security -fPIC -DOPENSSL_NO_ASM=1 -D_WIN32_WINNT=1536 -DGPR_BACKWARDS_COMPATIBILITY_MODE=1 -DHAVE_CONFIG_H=1 -DGRPC_ENABLE_FORK_SUPPORT=1 -DPyMODINIT_FUNC=__attribute__((visibility ("default"))) void -DGRPC_POSIX_FORK_ALLOW_PTHREAD_ATFORK=1 -Isrc/python/grpcio -Iinclude -I. -Ithird_party/boringssl/include -Ithird_party/zlib -Ithird_party/cares -Ithird_party/cares/cares -Ithird_party/cares/config_linux -I/usr/include/python2.7 -c src/core/lib/security/credentials/google_default/google_default_credentials.cc -o python_build/temp.linux-s390x-2.7/src/core/lib/security/credentials/google_default/google_default_credentials.o -std=c++11 -std=gnu99 -fvisibility=hidden -fno-wrapv -fno-exceptions -pthread
    cc1plus: warning: command line option '-Wstrict-prototypes' is valid for C/ObjC but not for C++
    cc1plus: warning: command line option '-std=gnu99' is valid for C/ObjC but not for C++
    In file included from third_party/boringssl/include/openssl/rsa.h:60:0,
                     from ./src/core/lib/security/credentials/jwt/json_token.h:23,
                     from ./src/core/lib/security/credentials/jwt/jwt_credentials.h:23,
                     from src/core/lib/security/credentials/google_default/google_default_credentials.cc:34:
    third_party/boringssl/include/openssl/base.h:114:2: error: #error "Unknown target CPU"
     #error "Unknown target CPU"
      ^